--- a/homepage.html
+++ b/homepage.html
@@ -10,6 +10,77 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <title>Homepage</title>
 </head>
+<script >
+function ValidateForm() {
+  var regName = /^[a-zA-Z]+ [a-zA-Z]+$/;
+    var name = document.getElementById('name').value;
+    if(!regName.test(name)){
+        alert('Please enter your full name (first & last name).');
+        document.getElementById('name').focus();
+        return false;
+    }
+
+    var phoneno = /^\d{10}$/;
+    var phone = document.getElementById('phone').value;
+    if (!phoneno.test(phone)) {
+    alert('Please provide a valid phone number');
+    phone.focus;
+    return false;
+ }
+
+  var email = document.getElementById('email');
+    var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+
+    if (!filter.test(email.value)) {
+    alert('Please provide a valid email address');
+    email.focus;
+    return false;
+ }
+ var newPassword = document.getElementById('password');
+    var minNumberofChars = 8;
+    var maxNumberofChars = 16;
+    var isNonWhiteSpace = /^\S*$/;
+    var isContainsUppercase = /^(?=.*[A-Z]).*$/;
+    var isContainsLowercase = /^(?=.*[a-z]).*$/;
+    var isContainsNumber = /^(?=.*[0-9]).*$/;
+    var isContainsSymbol = /^(?=.*[~`!@#$%^&*()--+={}\[\]|\\:;"'<>,.?/_₹]).*$/;
+    var isValidLength = /^.{8,16}$/;
+    
+    if (!isNonWhiteSpace.test(newPassword.value)) {
+    alert("Password must not contain Whitespaces.");
+    newPassword.focus;
+  }
+  if (!isContainsUppercase.test(newPassword.value)) {
+    alert("Password must have at least one Uppercase Character.");
+    newPassword.focus;
+  }
+  if (!isContainsLowercase.test(newPassword.value)) {
+    alert("Password must have at least one Lowercase Character.");
+    newPassword.focus;
+  }
+  if (!isContainsNumber.test(newPassword.value)) {
+    alert("Password must contain at least one Digit.");
+    newPassword.focus;
+  }
+  if (!isContainsSymbol.test(newPassword.value)) {
+    alert("Password must contain at least one Special Symbol.");
+    newPassword.focus;
+  }
+  if (!isValidLength.test(newPassword.value)) {
+    alert("Password must be 8-16 Characters Long.");
+    newPassword.focus;
+    return false;
+  }
+
+  
+}
+
+
+ 
+
+
+
+</script>
 <body>
   <div class="container">
 
@@ -161,17 +232,20 @@
 <!--contact section-->
 <section class="contact" id="contact">
   <h1>Contact Us</h1>
-  <div class="form-container">
-    <form action="bg2.jpg">
+  <div class="form-container" onsubmit="return ValidateForm()">
+    <form name='form1' action="bg2.jpg">
   
-      <label for="fname">First Name</label>
-      <input type="text" id="fname" name="firstname" placeholder="Your name..">
-  
-      <label for="lname">Last Name</label>
-      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" placeholder="Your name..">
+
+      <label for="phone">Phone Number</label>
+      <input type="text" id="phone" name="phone" placeholder="Your phone number..">
 
       <label for="email">Email-Id</label>
-      <input type="email" id="email" name="emil-id" placeholder="Your Email-ID..">
+      <input type="text" id="email" name="email-id" placeholder="Your Email-ID..">
+
+      <label for="password">Password</label>
+      <input type="text" id="password" name="password" placeholder="Your Password..">
   
       <label for="country">Country</label>
       <select id="country" name="country">
@@ -182,8 +256,7 @@
   
       <label for="subject">Subject</label>
       <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-  
-      <input type="submit" value="Submit">
+      <input type="submit" name="submit" value="Submit"/>
   
     </form>
   </div>
